# d2l-codebase

./: README.md  pyproject.toml
ch03_linear_regression/: sec4_scratch.py  sec5_concise.py
ch04_linear_classification/: sec4_scratch.py  sec5_concise.py
ch05_multilayer_perceptron/: sec2_concise.py  sec2_scratch.py  sec6_concise.py  sec6_scratch.py  sec7_house_prices.py
ch07_cnn/: sec6_lenet.py
my_utils/: activations.py  data.py  data_gen.py  losses.py  metric.py  optim.py  train.py
