[project]
name = "my-d2l"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["numpy>=2.3.5", "torch>=2.9.1", "torchvision>=0.24.1"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = ["ruff>=0.14.11"]

[tool.ruff]
fix = true
line-length = 100
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "UP", "SIM"]
